<resources>
    <string name="app_name">Nile Explorer</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="bonus">Bonus</string>
    <string name="music">Music</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="description">Find paired elements and solve the cipher</string>
</resources>