<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.PageSettingsNile"
    android:background="@drawable/bg1">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        style="@style/ButtonStyle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/music"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_margin="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMusic"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/ButtonStyle"
            android:text="@string/on"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>