<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.NileExplorerPage"
    android:background="@drawable/bg1">

    <ImageView
        android:id="@+id/titleImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_margin="15dp"
        android:src="@drawable/title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/titleImg"
        android:layout_margin="15dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/play"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"/>
    </LinearLayout>

</RelativeLayout>